# Capstone_project

./: README.md
backend/: .gitignore  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  log.txt  producer.py  pyproject.toml  seed.csv  stations.csv  text.txt
backend/k8s/ai-service/: deployment.yaml
backend/k8s/api-gateway/: ingress.yaml
backend/k8s/cluster-setup/: kind-config.yaml
backend/k8s/water-quality-service/: deployment.yaml
backend/pkg/core/grpc/: server.go
backend/pkg/core/repository/: repository.go
backend/pkg/middleware/: auth.go
backend/proto/model-service/: model.pb.go  model.pb.gw.go  model.proto  model_grpc.pb.go
backend/proto/user-service/: article.pb.go  article.pb.gw.go  article.proto  article_grpc.pb.go  chat.pb.go  chat.pb.gw.go  chat.proto  chat_grpc.pb.go  file.pb.go  file.pb.gw.go  file.proto  file_grpc.pb.go  notification.pb.go  notification.pb.gw.go  notification.proto  notification_grpc.pb.go  request.pb.go  request.pb.gw.go  request.proto  request_grpc.pb.go
backend/proto/water-quality-service/: water-quality.pb.go  water-quality.pb.gw.go  water-quality.proto  water-quality_grpc.pb.go
backend/services/ai-service/: .dockerignore  DLCode.py  DLCodeForAPI.py  Dockerfile  MLCode.py  MLCodeForAPI.py  Makefile  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  wqi_calculation.py
backend/services/ai-service/DLModels/: Config.py  ETSFormer.py  ETSFormerPar.py
backend/services/model-service/: Dockerfile
backend/services/user-service/: Dockerfile
backend/services/water-quality-service/: Dockerfile
(+71 files in other folders)
