[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nct2309 <nctstuti@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio-tools = "^1.71.0"
protobuf = "^6.30.2"
confluent-kafka = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
